# python-project-50

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  setup.py  sonar-project.properties
.github/workflows/: build.yml
gendiff/: __init__.py  diff.py  diff_builder.py  parsers.py
gendiff/cli/: gendiff.py
gendiff/core/: diff.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_json.py  test_nested.py  test_plain.py  test_stylish_format.py
